--- a/templates/about.html
+++ b/templates/about.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" href="">Главная</a>
+                <a class="nav-link" href="/">Главная</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/schedule/">Расписание</a>
