--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link active" href="">Главная<span class="sr-only">(current)</span></a>
+                <a class="nav-link active" href="/">Главная<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/schedule/">Расписание</a>
