--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -22,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <a class="nav-link" href="">Главная</a>
+                <a class="nav-link" href="/">Главная</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="/schedule/">Расписание<span class="sr-only">(current)</span></a>
