Add postgres db

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                         <input type="name" name="{{ form.name.name }}" class="" placeholder="Введите Ваше имя">
                     </div>
                     </br>
-                    <div class="phone">
+                    <div class="number">
                         <input type="number" name="{{ form.phone.name }}" class=""
                                placeholder="Введите Ваш телефон">
                     </div>
