--- a/staticfiles/static/style.css
+++ b/staticfiles/static/style.css
@@ -4,7 +4,6 @@
     padding: .0rem;
     padding-top: 5px;
 }
-
 .navbar-brand {
     margin-left: 20px;
 }
@@ -15,10 +14,9 @@
 }
 
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    background-color: #FFD7EA;
+    background-color: #ffd7ea;
     border-color: #dee2e6 #dee2e6 #FFD7EA;
 }
-
 .nav-tabs .nav-link {
     border: 1px solid transparent;
     border-top-left-radius: 0rem;
@@ -32,7 +30,6 @@ a {
 a:hover {
     color: #c46ea3;
 }
-
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .container-fluid {
     background-color: #FFD7EA;
