--- a/templates/index.html
+++ b/templates/index.html
@@ -1,120 +1,32 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Home page</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400" rel="stylesheet">
+{% extends 'base.html' %}
 
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="{% static '/style.css' %}">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">Logo of the company</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="/">Главная<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/schedule/">Расписание</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/about/">О нас</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/contacts/">Контакты</a>
-            </li>
-        </ul>
+{% block main_content %}
+
+    <div class="sidebar-a col-sm-2">
     </div>
-</nav>
-<div class="container-fluid text-center">
-    <div class="row content">
-        <div class="sidebar-a col-sm-2">
-        </div>
-        <div class="register col-sm-8 text-center">
-            <h1 class="title-1">Наша студия скоро откроется!</h1>
-            <h1 class="title-2">Для того, чтобы зарегистрироваться на день открытых дверей ,
-                заполните форму ниже:</h1>
-            <div class="container-form">
-                <form action="" method="post" class="form-group">{% csrf_token %}
-                    <div class="email">
-                        <input type="email" name="{{ form.email.name }}" class="" placeholder="Введите Ваш email">
-                    </div>
-                    </br>
-                    <div class="name">
-                        <input type="name" name="{{ form.name.name }}" class="" placeholder="Введите Ваше имя">
-                    </div>
-                    </br>
-                    <div class="number">
-                        <input type="number" name="{{ form.phone.name }}" class=""
-                               placeholder="Введите Ваш телефон">
-                    </div>
-                    </br>
-                    <button type="submit" class="btn btn-primary btn-black">Зарегистрироваться</button>
-                </form>
-            </div>
-            <div class="sidebar-b col-sm-2">
-            </div>
+    <div class="register col-sm-8 text-center">
+        <h1 class="title-1">Наша студия скоро откроется!</h1>
+        <h1 class="title-2">Для того, чтобы зарегистрироваться на день открытых дверей ,
+            заполните форму ниже:</h1>
+        <div class="container-form">
+            <form action="" method="post" class="form-group">{% csrf_token %}
+                <div class="email">
+                    <input type="email" name="{{ form.email.name }}" class="" placeholder="Введите Ваш email">
+                </div>
+                </br>
+                <div class="name">
+                    <input type="name" name="{{ form.name.name }}" class="" placeholder="Введите Ваше имя">
+                </div>
+                </br>
+                <div class="number">
+                    <input type="number" name="{{ form.phone.name }}" class=""
+                           placeholder="Введите Ваш телефон">
+                </div>
+                </br>
+                <button type="submit" class="btn btn-primary btn-black">Зарегистрироваться</button>
+            </form>
         </div>
     </div>
-</div>
-
-<footer>
-    <div class="container">
-        <div class="row justified-start">
-            <div class="col-sm-4 text-left">
-                <ul class="address">
-                    <span>Адрес</span>
-                    <li>
-                        <p><img class="icons-footer" src="{% static "svg/map.svg" %}"/>
-                            Проспект веры, дом надежды, офис любви</p>
-                    </li>
-
-                </ul>
-            </div>
-            <div class="col-sm-4 text-left">
-                <ul class="contact">
-                    <span>Контакты</span>
-                    <li>
-                        <p><img class="icons-footer" src="{% static "svg/phone.svg" %}"/>+90 1234 56789</p>
-                    </li>
-                    <li>
-                        <p><img class="icons-footer" src="{% static "svg/mail.svg" %}"/>info@gmail.com</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-4 text-left">
-                <ul class="social">
-                    <span>Соц сети</span>
-                    <li>
-                        <a href="#"><img class="icons-footer" src="{% static "svg/facebook.svg" %}"/>Facebook</a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="icons-footer" src="{% static "svg/instagram.svg" %}"/>Instagram</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <div class="sidebar-b col-sm-2">
     </div>
-</footer>
-<script
-        src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
