change for html pages

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -4,7 +4,7 @@
 
     <div class="sidebar-a col-sm-2">
     </div>
-    <div class="content col-sm-8 text-center">
+    <div class="register col-sm-8 text-center">
         <h1 class="title-1">Контакты</h1>
     </div>
     <div class="sidebar-b col-sm-2">
