--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,14 @@
     <div class="sidebar-a col-sm-2">
     </div>
     <div class="register col-sm-8 text-center">
-        <h1 class="title-1">О нас</h1>
+        <h1 class="title-1">
+            {% for about in title %}
+            {{about.title}}
+            {% endfor %}</h1>
+        <h2 class="title-2 text-justify">
+            {% for about in content %}
+            {{about.content}}
+            {% endfor %}</h2>
     </div>
     <div class="sidebar-b col-sm-2">
     </div>
