--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body>
 {% include 'header.html' %}
 
-<div class="container-fluid text-center">
+<div class="container-fluid">
     <div class="row content">
         {% block main_content %}
 
