--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -5,7 +5,16 @@
     <div class="sidebar-a col-sm-2">
     </div>
     <div class="register col-sm-8 text-center">
-        <h1 class="title-1">Контакты</h1>
+        <h1 class="title-1">
+            {% for contact in title %}
+            {{contact.title}}
+            {% endfor %}</h1>
+        <h2 class="title-2 text-justify">
+            {% for contact in content %}
+            {{contact.content}}
+            {% endfor %}</h2>
+
+
     </div>
     <div class="sidebar-b col-sm-2">
     </div>
