--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -5,7 +5,14 @@
     <div class="sidebar-a col-sm-2">
     </div>
     <div class="register col-sm-8 text-center">
-        <h1 class="title-1">Интерактивное расписание</h1>
+        <h1 class="title-1">
+            {% for schedule in title %}
+            {{schedule.title}}
+            {% endfor %}</h1>
+        <h2 class="title-2 text-justify">
+            {% for schedule in content %}
+            {{schedule.content}}
+            {% endfor %}</h2>
     </div>
     <div class="sidebar-b col-sm-2">
     </div>
